[add]design/product&footer&header&genre

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,8 +13,15 @@ ja:
       postal_code: "郵便番号"
       address: "住所"
       telephone_number: "電話番号"
-      
-      
+
+  attributes:
+    genre:
+     name: "ジャンル名"
+     
+    product:
+     name: 商品名
+     introduction: 商品説明
+     price: 税込価格
 
   enums:
     orders:
