Translate some words to JP

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,7 @@
 ja:
  activerecord:
+  models:
+   customer: "会員"
   attributes:
     customer:
       email: "メールアドレス"
@@ -22,6 +24,14 @@ ja:
      introduction: "商品説明"
      price: "税込価格"
 
+    admin:
+     email: "メールアドレス"
+
+    delivery:
+     address: "住所"
+     postal_code: "郵便番号"
+     destination: "宛名"
+
   enums:
     orders:
       order_status:
@@ -36,8 +46,3 @@ ja:
         before_starting: "製作待ち"
         now_processing: "製作中"
         finished: "製作完了"
-
-      delivery:
-        address: "住所"
-        postal_code: "郵便番号"
-        destination: "宛名"
